--- a/index.css
+++ b/index.css
@@ -286,7 +286,7 @@ opacity: 0.8;
     font-size: 38px;
     line-height: 46px;
     color: #464646;
-    margin-top: -117px;
+    margin-top: -111px;
 
 }
 .test{
@@ -314,24 +314,28 @@ display: flex;
 align-items: center;
 
 color: #848484;
+margin-top: -26px;
 
 
 }
 .borders{
-  left: 0.19%;
-  right: 0%;
-  top: 93.33%;
-  bottom: 0%;
-  
-
-border: 1px solid #E5E5E5;
+    /* position: absolute; */
+    /* left: 0.19%; */
+    margin-top: 45px;
+    /* right: 0%; */
+    /* top: 93.33%; */
+    /* bottom: 0%; */
+    /* border: 3px solid blue; */
+    width: 89%;
+    margin-left: 26px;
+    border-bottom: 3px solid red;
 }
 .email{
-  width: 440px;
+  width: 515px;
 height: 56px;
 left: 500px;
 top: 392px;
-
+padding-top: 0px;
 font-family: Lato;
 font-style: normal;
 font-weight: bold;
@@ -340,17 +344,41 @@ line-height: 28px;
 display: flex;
 align-items: center;
 text-align: center;
-
 color: #464646;
 
 }
 .btn{
-  
 left: 0%;
 right: 0%;
 top: 0%;
 bottom: 0%;
-
 background: linear-gradient(90deg, #AC519C 0.83%, #E5424F 100%);
 box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5);
+padding: 15px 174px;
+}
+.input100{
+	display: block;
+    width: 75%;
+    margin-left: 51px;
+    margin-right: 22px;
+    background: transparent;
+    font-family: Oswald-Medium;
+    font-size: 15px;
+    color: #43383e;
+    line-height: 1.2;
+    padding: 0 5px;
+}
+input.input100 {
+    height: 62px;
+    padding: 0 20px 0 23px;
+}
+.btns{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding-top: 13px;
+}
+.email-span{
+	color: green;
 }
