--- a/style.scss
+++ b/style.scss
@@ -116,9 +116,9 @@ button {
 	right: 0;
 	bottom: 0;
 	background-color: #262626;
-	background: #262626;
-	mix-blend-mode: normal;
-	opacity: 0.8;
+	background: rgb(0, 0, 0,.5);
+    mix-blend-mode: normal;
+    opacity: 1;
 	z-index: 2;
 	cursor: pointer;
 }
