--- a/index.css
+++ b/index.css
@@ -1,99 +1,98 @@
-body{
-	margin:0;
-	background-color: #F2F2F2;
+body {
+  margin: 0;
+  background-color: #f2f2f2;
 }
-header{
-	font-size: 20px;
-	color: #cccccc;
-	height: 75px;
+header {
+  font-size: 20px;
+  color: #cccccc;
+  height: 75px;
 }
-#topbar{
-	width:75%;
-	margin-left: auto ;
-  margin-right: auto ;
+#topbar {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 nav {
-	float: right;
+  float: right;
 }
-nav li{
-	display: inline;
-	padding-right: 30px;
+nav li {
+  display: inline;
+  padding-right: 30px;
 }
 .logo {
-	float:left;
-	font-size:30px;
-	padding-left:20px;
-	padding-top:20px;
+  float: left;
+  font-size: 30px;
+  padding-left: 20px;
+  padding-top: 20px;
 }
 
-.box{
- position: absolute;
-width: 560px;
-height: 144px;
-left: 267px;
-background-color: #F2F2F2;
-font-family: Lato;
-font-style: normal;
-font-weight: 300;
-font-size: 16px;
-line-height: 24px;
-/* or 150% */
-color: #101010;
-
+.box {
+  position: absolute;
+  width: 560px;
+  height: 144px;
+  left: 267px;
+  background-color: #f2f2f2;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+  color: #101010;
 }
 
-.blog-post{
-	margin-top:20px;
-	float:left;
+.blog-post {
+  margin-top: 20px;
+  float: left;
 }
-.blog-heading{
-	font-size: 36px;
-	margin-bottom:20px;
+.blog-heading {
+  font-size: 36px;
+  margin-bottom: 20px;
 }
-.sidebar{
+.sidebar {
   height: 540px;
   width: 270px;
   position: fixed;
   z-index: 1;
   top: 75px;
-  left: 897px;;
+  left: 897px;
   overflow-x: hidden;
   padding-top: 20px;
-  background-color: #F5F5F5;;
+  background-color: #f5f5f5;
 }
-footer{	
-	color: white;	
-	margin-left: auto ;    
-	margin-right: auto ;	
-	font-size:16px;	
-	min-height: 50px;	
-	padding:20px;	
+footer {
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 16px;
+  min-height: 50px;
+  padding: 20px;
 }
-#footer{	
-	width:75%;
-	margin-left: auto ;    
-	margin-right: auto ;
+#footer {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .blog-h1 {
   font-family: Lato;
-font-style: normal;
-font-weight: bold;
-font-size: 26px;
-line-height: 31px;
-color: #101010;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  color: #101010;
 }
 .blog-h2 {
-font-family: Lato;
-font-style: normal;
-font-weight: bold;
-font-size: 18px;
-line-height: 22px;
-color: #101010;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: #101010;
 }
 
 button {
-  background: linear-gradient(90deg, #AC519C 0.83%, #E5424F 100%);
-  box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5); 
+  background: linear-gradient(90deg, #ac519c 0.83%, #e5424f 100%);
+  box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5);
   border: none;
   color: white;
   padding: 15px 32px;
@@ -102,96 +101,90 @@ button {
   display: inline-block;
   font-size: 16px;
 }
-.border{
-  border: 1px solid #E5424F;
-  width: 100%
- }
+.border {
+  border: 1px solid #e5424f;
+  width: 100%;
+}
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .box {
-    width: 100%;
-    position: absolute;
-    width: 340px;
-    height: 240px;
-    left: 17px;
-    font-family: Lato;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 24px;
-    /* or 150% */
-    color: #101010;
+      width: 100%;
+      position: absolute;
+      width: 340px;
+      height: 240px;
+      left: 17px;
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 24px;
+      /* or 150% */
+      color: #101010;
   }
-  .button{
-    margin-left: 41px;
+  .button {
+      margin-left: 41px;
   }
-  .sidebar{
-    position: absolute;
-    width: 300px;
-    height: 426px;
-    left: 17px;
-    top: 1808px;
-    
-    background: #F5F5F5;
+  .sidebar {
+      position: absolute;
+      width: 300px;
+      height: 426px;
+      left: 17px;
+      top: 1808px;
+
+      background: #f5f5f5;
   }
   .blog-h1 {
-    font-family: Lato;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-    color: #101010;
-    width: 340px;
-    height: 87px;
-    left: 17px;
-    top: 25px;
+      font-family: Lato;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 29px;
+      color: #101010;
+      width: 340px;
+      height: 87px;
+      left: 17px;
+      top: 25px;
   }
   .blog-h2 {
-    width: 340px;
-    height: 49px;
-    left: 17px;
-    top: 1214px;
-    
-    font-family: Lato;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 22px;
-    
-    color: #101010;
-    
-    }
-    p {
-     
-width: 340px;
-height: 240px;
-left: 17px;
-top: 162px;
+      width: 340px;
+      height: 49px;
+      left: 17px;
+      top: 1214px;
 
-font-family: Lato;
-font-style: normal;
-font-weight: 300;
-font-size: 16px;
-line-height: 24px;
-/* or 150% */
+      font-family: Lato;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 22px;
 
+      color: #101010;
+  }
+  p {
+      width: 340px;
+      height: 240px;
+      left: 17px;
+      top: 162px;
 
-color: #101010;
-    }
-    .blog-p1{
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 24px;
+      /* or 150% */
+
+      color: #101010;
+  }
+  .blog-p1 {
       width: 340px;
       height: 426px;
       left: 17px;
       top: 745px;
-      
+
       font-family: Lato;
       font-style: normal;
       font-weight: 300;
@@ -199,51 +192,45 @@ color: #101010;
       line-height: 24px;
       /* or 150% */
       margin-top: 32px;
-      
+
       color: #101010;
-      
-    }
-    .blog-p2{
+  }
+  .blog-p2 {
       width: 340px;
       height: 498px;
       left: 17px;
       top: 1277px;
-      
+
       font-family: Lato;
       font-style: normal;
       font-weight: 300;
       font-size: 16px;
       line-height: 24px;
       /* or 150% */
-      
-      
+
       color: #101010;
-      
-    }
-    .blog-h22{
+  }
+  .blog-h22 {
       width: 340px;
-height: 49px;
-left: 17px;
-top: 680px;
+      height: 49px;
+      left: 17px;
+      top: 680px;
 
-font-family: Lato;
-font-style: normal;
-font-weight: bold;
-font-size: 18px;
-line-height: 22px;
+      font-family: Lato;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 22px;
 
-color: #101010;
-    }
-    img {
+      color: #101010;
+  }
+  img {
       width: 340px;
 
-left: -3px;
-top: 316px;
-
-    }
+      left: -3px;
+      top: 316px;
+  }
 }
-
-
 
 #overlay {
   position: fixed;
@@ -256,129 +243,200 @@ top: 316px;
   bottom: 0;
   background-color: #262626;
   background: #262626;
-mix-blend-mode: normal;
-opacity: 0.8;
+  mix-blend-mode: normal;
+  opacity: 0.8;
   z-index: 2;
   cursor: pointer;
 }
 
-#text{
-   width: 570px;
-    height: 310px;
-    left: 435px;
-    top: 218px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.5);
-    position: absolute;
-    font-size: 50px;
-    color: white;
-    /* transform: translate(-50%,-50%); */
-}
-.images{
+#text {
+  width: 570px;
+  height: 310px;
+  left: 435px;
+  top: 218px;
+  background: #ffffff;
+  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.5);
   position: absolute;
-    height: 15px;
-    left: 90.17%;
-    right: 41.92%;
-    top: calc(50% - 46px/2 - 2px);
-    font-family: Lato;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 38px;
-    line-height: 46px;
-    color: #464646;
-    margin-top: -111px;
-
+  font-size: 50px;
+  color: white;
+  /* transform: translate(-50%,-50%); */
 }
-.test{
- 
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-background: #FFFFFF;
-box-shadow: inset 0px 1px 5px rgba(142, 142, 142, 0.5);
+.images {
+  position: absolute;
+  height: 15px;
+  left: 90.17%;
+  right: 41.92%;
+  top: calc(50% - 46px / 2 - 2px);
+  font-family: Lato;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 38px;
+  line-height: 46px;
+  color: #464646;
+  margin-top: -111px;
+}
+.test {
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  background: #ffffff;
+  box-shadow: inset 0px 1px 5px rgba(142, 142, 142, 0.5);
 }
 .steps {
   position: absolute;
-height: 17px;
-left: 42.73%;
-right: 42.73%;
-font-family: Lato;
-font-style: normal;
-font-weight: 300;
-font-size: 14px;
-line-height: 17px;
-/* identical to box height */
+  height: 17px;
+  left: 42.73%;
+  right: 42.73%;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
 
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
 
-color: #848484;
-margin-top: -26px;
-
-
+  color: #848484;
+  margin-top: -26px;
 }
-.borders{
-    /* position: absolute; */
-    /* left: 0.19%; */
-    margin-top: 45px;
-    /* right: 0%; */
-    /* top: 93.33%; */
-    /* bottom: 0%; */
-    /* border: 3px solid blue; */
-    width: 89%;
-    margin-left: 26px;
-    border-bottom: 3px solid red;
+.borders {
+  /* position: absolute; */
+  /* left: 0.19%; */
+  margin-top: 45px;
+  /* right: 0%; */
+  /* top: 93.33%; */
+  /* bottom: 0%; */
+  /* border: 3px solid blue; */
+  width: 89%;
+  margin-left: 26px;
+  border-bottom: 3px solid red;
 }
-.email{
+.email {
   width: 515px;
-height: 56px;
-left: 500px;
-top: 392px;
-padding-top: 0px;
-font-family: Lato;
-font-style: normal;
-font-weight: bold;
-font-size: 23px;
-line-height: 28px;
-display: flex;
-align-items: center;
-text-align: center;
-color: #464646;
-
+  height: 56px;
+  left: 500px;
+  top: 392px;
+  padding-top: 0px;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 23px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #464646;
 }
-.btn{
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-background: linear-gradient(90deg, #AC519C 0.83%, #E5424F 100%);
-box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5);
-padding: 15px 174px;
+.btn {
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  background: linear-gradient(90deg, #ac519c 0.83%, #e5424f 100%);
+  box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5);
+  padding: 15px 174px;
 }
-.input100{
-	display: block;
-    width: 75%;
-    margin-left: 51px;
-    margin-right: 22px;
-    background: transparent;
-    font-family: Oswald-Medium;
-    font-size: 15px;
-    color: #43383e;
-    line-height: 1.2;
-    padding: 0 5px;
+.input100 {
+  display: block;
+  width: 75%;
+  margin-left: 51px;
+  margin-right: 22px;
+  background: transparent;
+  font-family: Oswald-Medium;
+  font-size: 15px;
+  color: #43383e;
+  line-height: 1.2;
+  padding: 0 5px;
 }
 input.input100 {
-    height: 62px;
-    padding: 0 20px 0 23px;
+  height: 62px;
+  padding: 0 20px 0 23px;
 }
-.btns{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	padding-top: 13px;
+.btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 13px;
 }
-.email-span{
-	color: green;
+.email-span {
+  color: green;
+}
+
+@media screen and (max-width: 1280px) {
+  text {
+      left: 28%;
+      top: 30%;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  text {
+      left: 23%;
+      top: 30%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  text {
+      left: 16%;
+      top: 30%;
+  }
+}
+
+@media screen and (max-width: 491px) {
+  #text {
+      width: 70vw;
+      height: auto;
+      left: 12%;
+      top: 20%;
+      position: absolute;
+      padding: 15px;
+      padding-top: 15px;
+      padding-right: 15px;
+      padding-bottom: 15px;
+      padding-left: 15px;
+  }
+
+  .images {
+      position: relative;
+      height: 15px;
+      left: auto;
+      width: 100px;
+      right: auto;
+      top: calc(50% - 46px / 2 - 2px);
+      font-family: Lato;
+      margin-top: 0;
+      position: relative;
+  }
+
+  .borders {
+      position: relative;
+      margin-top: 10px;
+      width: 93%;
+      margin-left: 10px;
+      border-bottom: 3px solid red;
+      position: relative;
+  }
+
+  .input100 {
+      height: 45px;
+      display: block;
+      width: auto;
+      margin-left: 0;
+      margin-right: 0;
+      background: transparent;
+      font-family: Oswald-Medium;
+      font-size: 15px;
+      color: #43383e;
+      line-height: 1.2;
+      padding: 0 5px;
+      position: relative;
+  }
+  .btn {
+      position: relative;
+      padding: 15px 30px;
+  }
 }
