--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	background-color: #F2F2F2;
+	background-color: #f2f2f2;
 }
 header {
 	font-size: 20px;
@@ -30,7 +30,7 @@ nav {
 	width: 560px;
 	height: 144px;
 	left: 267px;
-	background-color: #F2F2F2;
+	background-color: #f2f2f2;
 	font-family: Lato;
 	font-style: normal;
 	font-weight: 300;
@@ -55,7 +55,7 @@ nav {
 	left: 897px;
 	overflow-x: hidden;
 	padding-top: 20px;
-	background-color: #F5F5F5;
+	background-color: #f5f5f5;
 }
 footer {
 	color: white;
@@ -87,7 +87,7 @@ footer {
 	color: #101010;
 }
 button {
-	background: linear-gradient(90deg, #AC519C 0.83%, #E5424F 100%);
+	background: linear-gradient(90deg, #ac519c 0.83%, #e5424f 100%);
 	box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5);
 	border: none;
 	color: white;
@@ -98,10 +98,10 @@ button {
 	font-size: 16px;
 }
 .border {
-	border: 1px solid #E5424F;
+	border: 1px solid #e5424f;
 	width: 100%;
 }
-.btn {
+.buttons {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -116,9 +116,9 @@ button {
 	right: 0;
 	bottom: 0;
 	background-color: #262626;
-	background: rgb(0, 0, 0,.5);
-    mix-blend-mode: normal;
-    opacity: 1;
+	background: #262626;
+	mix-blend-mode: normal;
+	opacity: 0.8;
 	z-index: 2;
 	cursor: pointer;
 }
@@ -127,7 +127,7 @@ button {
 	height: 310px;
 	left: 435px;
 	top: 218px;
-	background: #FFFFFF;
+	background: #ffffff;
 	box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.5);
 	position: absolute;
 	font-size: 50px;
@@ -138,21 +138,21 @@ button {
 	height: 15px;
 	left: 90.17%;
 	right: 41.92%;
-	top: calc(50% - 46px/2 - 2px);
+	top: calc(50% - 46px / 2 - 2px);
 	font-family: Lato;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 38px;
 	line-height: 46px;
 	color: #464646;
-	margin-top: -117px;
+	margin-top: -111px;
 }
 .test {
 	left: 0%;
 	right: 0%;
 	top: 0%;
 	bottom: 0%;
-	background: #FFFFFF;
+	background: #ffffff;
 	box-shadow: inset 0px 1px 5px rgba(142, 142, 142, 0.5);
 }
 .steps {
@@ -168,19 +168,20 @@ button {
 	display: flex;
 	align-items: center;
 	color: #848484;
+	margin-top: -26px;
 }
 .borders {
-	left: 0.19%;
-	right: 0%;
-	top: 93.33%;
-	bottom: 0%;
-	border: 1px solid #E5E5E5;
+	margin-top: 45px;
+	width: 89%;
+	margin-left: 26px;
+	border-bottom: 3px solid red;
 }
 .email {
-	width: 440px;
+	width: 515px;
 	height: 56px;
 	left: 500px;
 	top: 392px;
+	padding-top: 0px;
 	font-family: Lato;
 	font-style: normal;
 	font-weight: bold;
@@ -196,10 +197,45 @@ button {
 	right: 0%;
 	top: 0%;
 	bottom: 0%;
-	background: linear-gradient(90deg, #AC519C 0.83%, #E5424F 100%);
+	background: linear-gradient(90deg, #ac519c 0.83%, #e5424f 100%);
 	box-shadow: 0px 3px 10px rgba(104, 104, 104, 0.5);
+	padding: 15px 174px;
 }
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+.input100 {
+	display: block;
+	width: 75%;
+	margin-left: 51px;
+	margin-right: 22px;
+	font-family: Lato;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 20px;
+	color: #828282;
+	display: flex;
+	align-items: center;
+	color: #828282;
+	font-size: 15px;
+	line-height: 1.2;
+	padding: 0 5px;
+	background: #FFFFFF;
+	box-shadow: inset 0px 1px 5px rgba(142, 142, 142, 0.5);
+}
+input.input100 {
+	height: 62px;
+	padding: 0 20px 0 23px;
+}
+.btns {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding-top: 13px;
+}
+.email-span {
+	color: green;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 	.box {
 		width: 100%;
 		position: absolute;
@@ -221,8 +257,8 @@ button {
 		width: 300px;
 		height: 426px;
 		left: 17px;
-		top: 1808px;
-		background: #F5F5F5;
+		top: 1852px;
+		background: #f5f5f5;
 	}
 	.blog-h1 {
 		font-family: Lato;
@@ -285,7 +321,7 @@ button {
 		line-height: 24px;
 		color: #101010;
 	}
-	.blogbody__blog-h22 {
+	.blog-h22 {
 		width: 340px;
 		height: 49px;
 		left: 17px;
@@ -301,5 +337,110 @@ button {
 		width: 340px;
 		left: -3px;
 		top: 316px;
+	}
+}
+@media screen and (max-width: 1280px) {
+	text {
+		left: 28%;
+		top: 30%;
+	}
+}
+@media screen and (max-width: 991px) {
+	text {
+		left: 23%;
+		top: 30%;
+	}
+}
+@media screen and (max-width: 767px) {
+	text {
+		left: 16%;
+		top: 30%;
+	}
+}
+@media screen and (max-width: 491px) {
+	#text {
+		width: 86vw;
+		height: auto;
+		left: 12%;
+		top: 20%;
+		position: absolute;
+		padding: 15px;
+		padding-top: 15px;
+		padding-right: 15px;
+		padding-bottom: 15px;
+		padding-left: 15px;
+		margin-left: -32px;
+	}
+	.steps {
+		top: 40px;
+		margin-top: -18px;
+		font-family: Lato;
+		font-style: normal;
+		font-weight: 300;
+		font-size: 14px;
+		line-height: 17px;
+		display: flex;
+		align-items: center;
+		color: #848484;
+	}
+	.images {
+		position: relative;
+		height: 20px;
+		left: auto;
+		width: 19px;
+		right: auto;
+		top: -12px;
+		font-family: Lato;
+		margin-top: 0;
+		position: relative;
+		margin-left: 303px;
+	}
+	.email {
+		width: 335px;
+		height: 56px;
+		left: 500px;
+		top: 392px;
+		padding-top: 0px;
+		font-family: Lato;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 23px;
+		line-height: 28px;
+		display: flex;
+		align-items: center;
+		text-align: left;
+		color: #464646;
+	}
+	.borders {
+		position: relative;
+		margin-top: 10px;
+		width: 93%;
+		margin-left: 10px;
+		border-bottom: 3px solid red;
+		position: relative;
+	}
+	.input100 {
+		height: 45px;
+		display: block;
+		width: 279px;
+		margin-left: 0;
+		margin-right: 0;
+		font-family: Lato;
+		font-style: normal;
+		font-weight: 300;
+		font-size: 20px;
+		line-height: 20px;
+		color: #828282;
+		display: flex;
+		align-items: center;
+		line-height: 1.2;
+		padding: 0 5px;
+		position: relative;
+		background: #FFFFFF;
+		box-shadow: inset 0px 1px 5px rgba(142, 142, 142, 0.5);
+	}
+	.btn {
+		position: relative;
+		padding: 15px 78px;
 	}
 }
